# gen_declension_table

./: Cargo.toml  README.md
migrations/2021-03-08-063435_create_nouns/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/src/: schema.rs
