[package]
name = "gen_declension_table"
version = "0.1.0"
authors = ["brianch <brianch@users.noreply.github.com>"]
edition = "2021"


[dependencies]
quick-xml = "0.28.2"

diesel = { version = "2.0.3", features = ["sqlite"] }
dotenv = "0.15.0"

serde_json = "1.0.96"
serde = "1.0.160"
serde_derive = "1.0.160"
